# whisper-ft

./: .gitignore  README.md  conda.yaml  inference.py  main.py  pyproject.toml  run.sh
config/: inference.yaml  peft_merge_only.yaml  whisper.yaml
src/: config.py  create_data.py  peft_merge.py  perf_metrics.py  pushbullet.py  reduce_noise.py  text_processor.py  trainer.py  utils.py
tests/: tmp.txt
